--- a/PodoDemo/Views/Prices/Edit.cshtml
+++ b/PodoDemo/Views/Prices/Edit.cshtml
@@ -148,5 +148,35 @@
                 </a>
             </div>
         </div>
+
+        <div class="row">
+            <div class="col-md-12">
+                <div class="custom-title">
+                    <hr />
+                    <span class="glyphicon glyphicon-list" aria-hidden="true"></span>
+                    <span>이력정보</span>
+                </div>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-md-12">
+                <table class="table table-striped table-hover table-responsive">
+                    <thead>
+                        <tr>
+                            <th>생성일</th>
+                            <th>생성자</th>
+                            <th>수정일</th>
+                            <th>수정자</th>
+                        </tr>
+                    </thead>
+                    <tr class="info">
+                        <td><strong>@Model.Createdate</strong></td>
+                        <td><strong>@Model.Createuser</strong></td>
+                        <td><strong>@Model.Modifydate</strong></td>
+                        <td><strong>@Model.Modifyuser</strong></td>
+                    </tr>
+                </table>
+            </div>
+        </div>
     </div>
 </div>
