--- a/PodoDemo/Views/Products/Edit.cshtml
+++ b/PodoDemo/Views/Products/Edit.cshtml
@@ -4,7 +4,7 @@
     ViewData["Title"] = "제품";
 }
 
-
+<script src="~/Views/Prices/IndexGrid.js"></script>
 <script type="text/javascript">
     $(document).ready(function () {
         SetBasicElement();// 기본적으로 그리는 화면 내용
@@ -32,7 +32,7 @@
         GetOptionDDL('7', 'Origin', SetoptionTag, '@Model.Origin', true, false, false);
         // 부서값 / 적용할 HTML코드 ID / 콜백함수 / 기본 선택 값 / 전체 / 맨위값 빈값 / 권한
         GetUserDDL("", '@Model.Ownerid', 'Ownerid', SetoptionTag, '@Model.Ownerid', false, false, false);
-        SetPricesElement(@Html.Raw(ViewData["connctedPriceList"]));             // 연결된 가격표 표시
+        SetPricesIndex(@Html.Raw(ViewData["connctedPriceList"]));// 연결된 가격표 표시
     }
 
     // 폼이 입력될 때
@@ -66,53 +66,6 @@
         }
 
         return true;
-    }
-
-    // 연결된 가격표 항목 표시
-    function SetPricesElement(priceListRaw) {
-        var source =
-            {
-                localdata: priceListRaw,
-                datatype: "json",
-                datafields:
-                [
-                    { name: 'Priceid', type: 'number' },
-                    { name: 'Product', type: 'string', map: 'Product>Name' },
-                    { name: 'Cost', type: 'string' },
-                    { name: 'Prices', type: 'string' },
-                    { name: 'Ownerid', type: 'string' },
-                ]
-            };
-
-        var dataAdapter = new $.jqx.dataAdapter(source);
-
-        $("#priceList").jqxGrid(
-            {
-                width: '100%',
-                source: dataAdapter,
-                pageable: true,
-                autoheight: true,
-                autorowheight: true,
-                sortable: true,
-                altrows: true,
-                enabletooltips: true,
-                editable: false,
-                selectionmode: 'singlerow',
-                pagesizeoptions: [10, 15, 20, 25, 30, 35, 40, 45, 50],
-                //showfilterrow: true,
-                filterable: true,
-                pagesize: 15,
-                theme: "metroCustom",//테마설정
-                localization: GetLocalizationString(),
-                columns: [
-                    //문자로 나오는 항목
-                    { text: "Priceid", datafield: "Priceid", hidden: true },
-                    { text: "제품", datafield: "Product", align: 'center', cellsalign: 'left', width: '40%', minwidth: '100px' },
-                    { text: "원가", datafield: 'Cost', align: 'center', cellsalign: 'center', width: '20%', minwidth: '100px' },
-                    { text: "판매가", datafield: "Prices", align: 'center', cellsalign: 'center', width: '20%', minwidth: '100px' },
-                    { text: '담당자', datafield: 'Ownerid', align: 'center', cellsalign: 'center', width: '20%', minwidth: '100px' },
-                ]
-            });
     }
 </script>
 
@@ -194,6 +147,36 @@
                     <span class="glyphicon glyphicon-list" aria-hidden="true"></span>
                     목록
                 </a>
+            </div>
+        </div>
+
+        <div class="row">
+            <div class="col-md-12">
+                <div class="custom-title">
+                    <hr />
+                    <span class="glyphicon glyphicon-list" aria-hidden="true"></span>
+                    <span>이력정보</span>
+                </div>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-md-12">
+                <table class="table table-striped table-hover table-responsive">
+                    <thead>
+                        <tr>
+                            <th>생성일</th>
+                            <th>생성자</th>
+                            <th>수정일</th>
+                            <th>수정자</th>
+                        </tr>
+                    </thead>
+                    <tr class="info">
+                        <td><strong>@Model.Createdate</strong></td>
+                        <td><strong>@Model.Createuser</strong></td>
+                        <td><strong>@Model.Modifydate</strong></td>
+                        <td><strong>@Model.Modifyuser</strong></td>
+                    </tr>
+                </table>
             </div>
         </div>
 
