공용 그리드 항목 수정

--- a/PodoDemo/Views/Prices/Index.cshtml
+++ b/PodoDemo/Views/Prices/Index.cshtml
@@ -9,7 +9,7 @@
         Layout = "~/Views/Shared/Popup_Layout.cshtml";
     }
 }
-<script src="/Views/Prices/IndexGrid.js"></script>
+<script src="~/js/Views/Prices_IndexGrid.js"></script>
 <script type="text/javascript">
     $(document).ready(function () {
         SetBasicElement();
