--- a/PodoDemo/Views/Products/Edit.cshtml
+++ b/PodoDemo/Views/Products/Edit.cshtml
@@ -4,7 +4,7 @@
     ViewData["Title"] = "제품";
 }
 
-<script src="~/Views/Prices/IndexGrid.js"></script>
+<script src="~/js/Views/Prices_IndexGrid.js"></script>
 <script type="text/javascript">
     $(document).ready(function () {
         SetBasicElement();// 기본적으로 그리는 화면 내용
@@ -44,7 +44,7 @@
                 $("#ProductCreateForm").submit();
             }
         } else if (targetName == "Delete") {
-            if (confirm("해당 내용을 정말로 삭제하시겠습니까?\n삭제후에는 복원되지 않습니다.")) {
+            if (confirm("해당 내용을 정말로 삭제하시겠습니까?\n삭제후에는 복원되지 않습니다.\n또한 연결된 가격표가 자동으로 삭제됩니다.")) {
                 if ($("#Productid").val() != "" && $("#Productid").val() != null) {
                     $("#ProductCreateForm").prop("action", "/Products/" + targetName + "/@Model.Productid");
                     $("#ProductCreateForm").submit();
