--- a/PodoDemo/Views/Contacts/Index.cshtml
+++ b/PodoDemo/Views/Contacts/Index.cshtml
@@ -34,7 +34,7 @@
             {
             <text>
             if (typeof window.opener.SetContactsInfo == "function") { window.opener.SetContactsInfo(data.Contactid, data.Name); }
-            if (typeof window.opener.SetRegardingInfo == "function") { window.opener.SetRegardingInfo(data.Accountid, data.Name) }
+            if (typeof window.opener.SetRegardingInfo == "function") { window.opener.SetRegardingInfo(data.Contactid, data.Name) }
             window.close();
             </text>
             }else
