--- a/PodoDemo/Views/Users/Index.cshtml
+++ b/PodoDemo/Views/Users/Index.cshtml
@@ -41,7 +41,8 @@
                     { name: 'Mobile', type: 'string' },
                     { name: 'Department', type: 'string' },
                     { name: 'Position', type: 'string' },
-                    { name: 'Level', type: 'string' }
+                    { name: 'Level', type: 'string' },
+                    { name: 'Organization', type: 'string', Map: 'Organization>Name' }
                 ]
             };
 
@@ -75,7 +76,8 @@
                     { text: "휴대폰", datafield: "Mobile", align: 'center', cellsalign: 'center', width: "15%", minwidth: '100px' },
                     { text: "부서", datafield: "Department", align: 'center', cellsalign: 'center', width: "10%", minwidth: '100px' },
                     { text: "직급", datafield: "Position", align: 'center', cellsalign: 'center', width: "10%", minwidth: '100px' },
-                    { text: "등급", datafield: "Level", align: 'center', cellsalign: 'center', width: "10%", minwidth: '100px' }
+                    { text: "등급", datafield: "Level", align: 'center', cellsalign: 'center', width: "10%", minwidth: '100px' },
+                    { text: "조직", datafield: "Organization", align: 'center', cellsalign: 'center', width: "10%", minwidth: '100px' }
                 ]
             });
     }
