--- a/PodoDemo/Views/Users/Index.cshtml
+++ b/PodoDemo/Views/Users/Index.cshtml
@@ -28,6 +28,7 @@
     });
     // 대메뉴 표시
     function SetMainmenulist(userlistRaw) {
+        console.log(userlistRaw);
         var source =
             {
                 localdata: userlistRaw,
