--- a/PodoDemo/Views/Todoes/Edit.cshtml
+++ b/PodoDemo/Views/Todoes/Edit.cshtml
@@ -1,7 +1,7 @@
 ﻿@model PodoDemo.Models.Todo
 
 @{
-    ViewData["Title"] = "Edit";
+    ViewData["Title"] = "할일";
 }
 
 <script type="text/javascript">
