--- a/PodoDemo/Views/Appointments/Create.cshtml
+++ b/PodoDemo/Views/Appointments/Create.cshtml
@@ -21,9 +21,7 @@
         @if (ViewBag.isPop)
         {
             <text>
-        //if (typeof window.opener.SetAccountsInfo == "function") { window.opener.SetAccountsInfo(data.Accountid, data.Name); }
-        //if (typeof window.opener.SetRegardingInfo == "function") { window.opener.SetRegardingInfo(data.Accountid, data.Name) }
-        //window.close();
+        //if (typeof window.opener.SetRegardingInfo == "function") { window.opener.SetRegardingInfo(data.Accountid, data.Name); window.close(); }
             </text>
         }
         else
