--- a/PodoDemo/Views/Appointments/Edit.cshtml
+++ b/PodoDemo/Views/Appointments/Edit.cshtml
@@ -1,117 +1,234 @@
 @model PodoDemo.Models.Appointment
 
 @{
-    ViewData["Title"] = "Edit";
+    ViewData["Title"] = "약속";
 }
 
-<h2>Edit</h2>
 
-<form asp-action="Edit">
-    <div class="form-horizontal">
-        <h4>Appointment</h4>
-        <hr />
-        <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-    <input type="hidden" asp-for="Appointmentid" />
-        <div class="form-group">
-            <label asp-for="Name" class="col-md-2 control-label"></label>
-            <div class="col-md-10">
-                <input asp-for="Name" class="form-control" />
-                <span asp-validation-for="Name" class="text-danger"></span>
+<script type="text/javascript">
+    $(document).ready(function () {
+        SetBasicElement();// 기본적으로 그리는 화면 내용
+    });
+
+    // 기본적으로 그리는 화면 내용
+    function SetBasicElement() {
+        $("#jqdatetimeinput_startdate")
+            .jqxDateTimeInput({ width: '100%', formatString: 'yyyy-MM-dd' })
+            .val(new Date('@Model.Startdate.ToString("yyyy-MM-dd")'));
+        $("#jqdatetimeinput_enddate")
+            .jqxDateTimeInput({ width: '100%', formatString: 'yyyy-MM-dd' })
+            .val(new Date('@Model.Enddate.ToString("yyyy-MM-dd")'));
+
+        GetOptionDDL('5', 'State', SetoptionTag, '@Model.State', true, false, false);
+        SetoptionTag('RegardingTypeList', JSON.parse('@Html.Raw(ViewBag.SubmenuList)'), '@Model.Regardingobjecttypeid', false, true, false);
+        GetUserDDL("", '@Model.Ownerid', 'Ownerid', SetoptionTag, '@Model.Ownerid', false, false, false);
+    }
+
+    // 폼이 입력될 때
+    function SubmitForm(targetName) {
+        if (targetName == "Edit") {
+            // 유효성 검사 후 진행
+            if (ValidateForm()) {
+                $("#Startdate").val($('#jqdatetimeinput_startdate').jqxDateTimeInput('getText'));
+                $("#Enddate").val($('#jqdatetimeinput_enddate').jqxDateTimeInput('getText'));
+                $("#AppointmentsEditForm").prop("action", "/Appointments/" + targetName + "/@Model.Appointmentid");
+                $("#AppointmentsEditForm").submit();
+            }
+        } else if (targetName == "Delete") {
+            if (confirm("해당 내용을 정말로 삭제하시겠습니까?\n삭제후에는 복원할 수 없습니다.")) {
+                if ($("#Appointmentid").val() != "" && $("#Appointmentid").val() != null) {
+                    $("#AppointmentsEditForm").prop("action", "/Appointments/" + targetName + "/@Model.Appointmentid");
+                    $("#AppointmentsEditForm").submit();
+                } else {
+                    alert("삭제할 내용이 없습니다.");
+                    return;
+                }
+            }
+        }
+    }
+
+    // 입력한 값들에 대한 유효성 검사
+    function ValidateForm() {
+        var nameValue = $("#Name").val();
+        var startdateValue = $("#jqdatetimeinput_startdate").jqxDateTimeInput('getText');
+        var stateValue = $("#State option:selected").val();
+
+        if (nameValue == "") {
+            alert("제목을 입력해주세요.");
+            return false;
+        }
+
+        if (startdateValue == "") {
+            alert("시작날짜는 반드시 지정해주세요.");
+            return false;
+        } else {
+            if (!IsDateType(startdateValue)) {
+                alert("날짜 형식을 올바르게 입력해주세요.");
+                return false;
+            }
+        }
+
+        if (stateValue == "") {
+            alert("상태를 선택해주세요.");
+            return false;
+        }
+
+        return true;
+    }
+
+    // 관련항목에 따른 각 항목 Index 띄워주기
+    function SearchRegardingObjectPop() {
+        var inSubmenu = new Object();
+        inSubmenu.Id = $("#RegardingTypeList option:selected").val();
+        var menu = ExecuteAjax("POST", window.location.origin + "/api/CommonAPI/GetSubmenuUrl", "json", "application/json", JSON.stringify(inSubmenu));
+        $("#Regardingobjecttypeid").val(menu.Id);
+        WindowOpenScroll(menu.Menuurl+ "?isPop=true", "", 350, 600, 100, 100);
+    }
+
+    // 관련항목에서 설정한 내용들 반영
+    function SetRegardingInfo(id, name) {
+        $("#Regardingobjectid").val(id);
+        $("#Regardingobjectname").val(name);
+    }
+</script>
+
+<div class="View">
+    <div class="container custom-container">
+        <div class="row">
+            <div class="col-md-12 custom-header">
+                <p class="text-left">약속 정보</p>
             </div>
         </div>
-        <div class="form-group">
-            <label asp-for="Description" class="col-md-2 control-label"></label>
-            <div class="col-md-10">
-                <input asp-for="Description" class="form-control" />
-                <span asp-validation-for="Description" class="text-danger"></span>
+
+        <div class="col-md-12">
+            <div class="custom-title">
+                <span class="glyphicon glyphicon-list" aria-hidden="true"></span>
+                <span>기본 정보</span>
+                <hr />
             </div>
         </div>
-        <div class="form-group">
-            <label asp-for="Regardingobjectid" class="col-md-2 control-label"></label>
-            <div class="col-md-10">
-                <input asp-for="Regardingobjectid" class="form-control" />
-                <span asp-validation-for="Regardingobjectid" class="text-danger"></span>
+
+        <form class="form-horizontal" id="AppointmentsEditForm" method="post">
+            @Html.AntiForgeryToken()
+            <input type="hidden" id="Appointmentid" name="Appointmentid" value="@Model.Appointmentid" />
+            <input type="hidden" id="Createdate" name="Createdate" value="@Model.Createdate" />
+            <input type="hidden" id="Createuser" name="Createuser" value="@Model.Createuser" />
+            <input type="hidden" id="Modifydate" name="Modifydate" value="@Model.Modifydate" />
+            <input type="hidden" id="Modifyuser" name="Modifyuser" value="@Model.Modifyuser" />
+
+            <div class="form-group">
+                <label class="col-md-1 control-label requireField">제목</label>
+                <div class="col-md-3">
+                    <input type="text" id="Name" name="Name" class="form-control" placeholder="제목" value="@Model.Name" />
+                </div>
+
+                <label class="col-md-1 control-label requireField">시작일</label>
+                <div class="col-md-3">
+                    <div id="jqdatetimeinput_startdate"></div>
+                    <input type="hidden" id="Startdate" name="Startdate" />
+                </div>
+                <label class="col-md-1 control-label">종료일</label>
+                <div class="col-md-3">
+                    <div id="jqdatetimeinput_enddate"></div>
+                    <input type="hidden" id="Enddate" name="Enddate" />
+                </div>
+            </div>
+
+            <div class="form-group">
+                <label class="col-md-1 control-label requireField">상태</label>
+                <div class="col-md-3">
+                    <select id="State" name="State" class="form-control"></select>
+                </div>
+                <label class="col-md-1 control-label">관련항목<br />검색하기</label>
+                <div class="col-md-3">
+                    <div class="input-group">
+                        <input type="hidden" id="Regardingobjectid" name="Regardingobjectid" value="@Model.Regardingobjectid" />
+                        <input type="hidden" id="Regardingobjecttypeid" name="Regardingobjecttypeid" value="@Model.Regardingobjecttypeid" />
+                        <select class="form-control" id="RegardingTypeList" name="RegardingTypeList"></select>
+                        <span class="input-group-btn">
+                            <button type="button" class="btn btn-default" onclick="SearchRegardingObjectPop();">
+                                <span class="glyphicon glyphicon-search" aria-hidden="true"></span>
+                            </button>
+                        </span>
+                    </div>
+                </div>
+                <div class="col-md-4">
+                    <input type="text" id="Regardingobjectname" name="Regardingobjectname" class="form-control"
+                           value="@Model.Regardingobjectname"
+                           placeholder="선택된 관련항목이 표시됩니다." aria-describedby="regardingobject name" readonly="readonly" />
+                </div>
+            </div>
+
+            <div class="form-group">
+                <label class="col-md-1 control-label">담당자</label>
+                <div class="col-md-3">
+                    <select id="Ownerid" name="Ownerid" class="form-control"></select>
+                </div>
+            </div>
+
+            <div class="form-group">
+                <label class="col-md-1 control-label">설명</label>
+                <div class="col-md-11">
+                    <textarea id="Description" name="Description" class="form-control" placeholder="내용을 입력하세요." rows="4">@Model.Description</textarea>
+                </div>
+            </div>
+        </form>
+
+        <div class="row">
+            @if (ViewData["Modify"].ToString().Equals("4-1") || ViewData["Modify"].ToString().Equals("4-2"))
+            {
+                <div class="col-md-2 custom-row-btn-margin">
+                    <button type="button" id="CreateAppointmentsButton" class="btn btn-default" onclick="SubmitForm('Edit');">
+                        <span class="glyphicon glyphicon-floppy-disk" aria-hidden="true"></span>
+                        저장
+                    </button>
+                </div>
+            }
+            @if (ViewData["Delete"].ToString().Equals("4-1") || ViewData["Delete"].ToString().Equals("4-2"))
+            {
+                <div class="col-md-2 custom-row-btn-margin">
+                    <button type="button" id="DeleteButton" class="btn btn-default btn-danger" onclick="SubmitForm('Delete');">
+                        <span class="glyphicon glyphicon-trash" aria-hidden="true"></span>
+                        삭제
+                    </button>
+                </div>
+            }
+            <div class="col-md-2 custom-row-btn-margin">
+                <a href="/Appointments/Index" class="btn btn-default">
+                    <span class="glyphicon glyphicon-list" aria-hidden="true"></span>
+                    목록
+                </a>
             </div>
         </div>
-        <div class="form-group">
-            <label asp-for="Regardingobjecttypeid" class="col-md-2 control-label"></label>
-            <div class="col-md-10">
-                <input asp-for="Regardingobjecttypeid" class="form-control" />
-                <span asp-validation-for="Regardingobjecttypeid" class="text-danger"></span>
+
+        <div class="row">
+            <div class="col-md-12">
+                <div class="custom-title">
+                    <hr />
+                    <span class="glyphicon glyphicon-list" aria-hidden="true"></span>
+                    <span>이력정보</span>
+                </div>
             </div>
         </div>
-        <div class="form-group">
-            <label asp-for="Regardingobjectname" class="col-md-2 control-label"></label>
-            <div class="col-md-10">
-                <input asp-for="Regardingobjectname" class="form-control" />
-                <span asp-validation-for="Regardingobjectname" class="text-danger"></span>
-            </div>
-        </div>
-        <div class="form-group">
-            <label asp-for="Startdate" class="col-md-2 control-label"></label>
-            <div class="col-md-10">
-                <input asp-for="Startdate" class="form-control" />
-                <span asp-validation-for="Startdate" class="text-danger"></span>
-            </div>
-        </div>
-        <div class="form-group">
-            <label asp-for="Enddate" class="col-md-2 control-label"></label>
-            <div class="col-md-10">
-                <input asp-for="Enddate" class="form-control" />
-                <span asp-validation-for="Enddate" class="text-danger"></span>
-            </div>
-        </div>
-        <div class="form-group">
-            <label asp-for="Createdate" class="col-md-2 control-label"></label>
-            <div class="col-md-10">
-                <input asp-for="Createdate" class="form-control" />
-                <span asp-validation-for="Createdate" class="text-danger"></span>
-            </div>
-        </div>
-        <div class="form-group">
-            <label asp-for="Createuser" class="col-md-2 control-label"></label>
-            <div class="col-md-10">
-                <input asp-for="Createuser" class="form-control" />
-                <span asp-validation-for="Createuser" class="text-danger"></span>
-            </div>
-        </div>
-        <div class="form-group">
-            <label asp-for="Modifydate" class="col-md-2 control-label"></label>
-            <div class="col-md-10">
-                <input asp-for="Modifydate" class="form-control" />
-                <span asp-validation-for="Modifydate" class="text-danger"></span>
-            </div>
-        </div>
-        <div class="form-group">
-            <label asp-for="Modifyuser" class="col-md-2 control-label"></label>
-            <div class="col-md-10">
-                <input asp-for="Modifyuser" class="form-control" />
-                <span asp-validation-for="Modifyuser" class="text-danger"></span>
-            </div>
-        </div>
-        <div class="form-group">
-            <label asp-for="Ownerid" class="control-label col-md-2"></label>
-            <div class="col-md-10">
-                <select asp-for="Ownerid" class="form-control" asp-items="ViewBag.Ownerid"></select>
-                <span asp-validation-for="Ownerid" class="text-danger"></span>
-            </div>
-        </div>
-        <div class="form-group">
-            <label asp-for="State" class="col-md-2 control-label"></label>
-            <div class="col-md-10">
-                <input asp-for="State" class="form-control" />
-                <span asp-validation-for="State" class="text-danger"></span>
-            </div>
-        </div>
-        <div class="form-group">
-            <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Save" class="btn btn-default" />
+        <div class="row">
+            <div class="col-md-12">
+                <table class="table table-striped table-hover table-responsive">
+                    <thead>
+                        <tr>
+                            <th>생성일</th>
+                            <th>생성자</th>
+                            <th>수정일</th>
+                            <th>수정자</th>
+                        </tr>
+                    </thead>
+                    <tr class="info">
+                        <td><strong>@Model.Createdate</strong></td>
+                        <td><strong>@Model.Createuser</strong></td>
+                        <td><strong>@Model.Modifydate</strong></td>
+                        <td><strong>@Model.Modifyuser</strong></td>
+                    </tr>
+                </table>
             </div>
         </div>
     </div>
-</form>
-
-<div>
-    <a asp-action="Index">Back to List</a>
 </div>
-
