--- a/PodoDemo/Views/Todoes/Create.cshtml
+++ b/PodoDemo/Views/Todoes/Create.cshtml
@@ -140,8 +140,8 @@
                 <label class="col-md-1 control-label">관련항목<br />검색하기</label>
                 <div class="col-md-3">
                     <div class="input-group">
-                        <input type="hidden" id="Regardingobjectid" name="Regardingobjectid" value="" />
-                        <input type="hidden" id="Regardingobjecttypeid" name="Regardingobjecttypeid" value="" />
+                        <input type="hidden" id="Regardingobjectid" name="Regardingobjectid" value="0" />
+                        <input type="hidden" id="Regardingobjecttypeid" name="Regardingobjecttypeid" />
                         <select class="form-control" id="RegardingTypeList" name="RegardingTypeList"></select>
                         <span class="input-group-btn">
                             <button type="button" class="btn btn-default" onclick="SearchRegardingObjectPop();">
