휴가관련 모델 추가 시작

--- a/PodoDemo/Views/Appointments/Index.cshtml
+++ b/PodoDemo/Views/Appointments/Index.cshtml
@@ -44,7 +44,7 @@
             else
             {
                 <text>
-            location.href = "/Appointments/Edit/" + data.Todoid;
+            location.href = "/Appointments/Edit/" + data.Appointmentid;
                 </text>
             }
         });
