--- a/PodoDemo/Views/Appointments/Edit.cshtml
+++ b/PodoDemo/Views/Appointments/Edit.cshtml
@@ -1,16 +1,16 @@
-@model PodoDemo.Models.Appointment
+ï»¿@model PodoDemo.Models.Appointment
 
 @{
-    ViewData["Title"] = "¾à¼Ó";
+    ViewData["Title"] = "ì•½ì†";
 }
 
 
 <script type="text/javascript">
     $(document).ready(function () {
-        SetBasicElement();// ±âº»ÀûÀ¸·Î ±×¸®´Â È­¸é ³»¿ë
+        SetBasicElement();// ê¸°ë³¸ì ìœ¼ë¡œ ê·¸ë¦¬ëŠ” í™”ë©´ ë‚´ìš©
     });
 
-    // ±âº»ÀûÀ¸·Î ±×¸®´Â È­¸é ³»¿ë
+    // ê¸°ë³¸ì ìœ¼ë¡œ ê·¸ë¦¬ëŠ” í™”ë©´ ë‚´ìš©
     function SetBasicElement() {
         $("#jqdatetimeinput_startdate")
             .jqxDateTimeInput({ width: '100%', formatString: 'yyyy-MM-dd' })
@@ -24,10 +24,10 @@
         GetUserDDL("", '@Model.Ownerid', 'Ownerid', SetoptionTag, '@Model.Ownerid', false, false, false);
     }
 
-    // ÆûÀÌ ÀÔ·ÂµÉ ¶§
+    // í¼ì´ ì…ë ¥ë  ë•Œ
     function SubmitForm(targetName) {
         if (targetName == "Edit") {
-            // À¯È¿¼º °Ë»ç ÈÄ ÁøÇà
+            // ìœ íš¨ì„± ê²€ì‚¬ í›„ ì§„í–‰
             if (ValidateForm()) {
                 $("#Startdate").val($('#jqdatetimeinput_startdate').jqxDateTimeInput('getText'));
                 $("#Enddate").val($('#jqdatetimeinput_enddate').jqxDateTimeInput('getText'));
@@ -35,48 +35,48 @@
                 $("#AppointmentsEditForm").submit();
             }
         } else if (targetName == "Delete") {
-            if (confirm("ÇØ´ç ³»¿ëÀ» Á¤¸»·Î »èÁ¦ÇÏ½Ã°Ú½À´Ï±î?\n»èÁ¦ÈÄ¿¡´Â º¹¿øÇÒ ¼ö ¾ø½À´Ï´Ù.")) {
+            if (confirm("í•´ë‹¹ ë‚´ìš©ì„ ì •ë§ë¡œ ì‚­ì œí•˜ì‹œê² ìŠµë‹ˆê¹Œ?\nì‚­ì œí›„ì—ëŠ” ë³µì›í•  ìˆ˜ ì—†ìŠµë‹ˆë‹¤.")) {
                 if ($("#Appointmentid").val() != "" && $("#Appointmentid").val() != null) {
                     $("#AppointmentsEditForm").prop("action", "/Appointments/" + targetName + "/@Model.Appointmentid");
                     $("#AppointmentsEditForm").submit();
                 } else {
-                    alert("»èÁ¦ÇÒ ³»¿ëÀÌ ¾ø½À´Ï´Ù.");
+                    alert("ì‚­ì œí•  ë‚´ìš©ì´ ì—†ìŠµë‹ˆë‹¤.");
                     return;
                 }
             }
         }
     }
 
-    // ÀÔ·ÂÇÑ °ªµé¿¡ ´ëÇÑ À¯È¿¼º °Ë»ç
+    // ì…ë ¥í•œ ê°’ë“¤ì— ëŒ€í•œ ìœ íš¨ì„± ê²€ì‚¬
     function ValidateForm() {
         var nameValue = $("#Name").val();
         var startdateValue = $("#jqdatetimeinput_startdate").jqxDateTimeInput('getText');
         var stateValue = $("#State option:selected").val();
 
         if (nameValue == "") {
-            alert("Á¦¸ñÀ» ÀÔ·ÂÇØÁÖ¼¼¿ä.");
+            alert("ì œëª©ì„ ì…ë ¥í•´ì£¼ì„¸ìš”.");
             return false;
         }
 
         if (startdateValue == "") {
-            alert("½ÃÀÛ³¯Â¥´Â ¹İµå½Ã ÁöÁ¤ÇØÁÖ¼¼¿ä.");
+            alert("ì‹œì‘ë‚ ì§œëŠ” ë°˜ë“œì‹œ ì§€ì •í•´ì£¼ì„¸ìš”.");
             return false;
         } else {
             if (!IsDateType(startdateValue)) {
-                alert("³¯Â¥ Çü½ÄÀ» ¿Ã¹Ù¸£°Ô ÀÔ·ÂÇØÁÖ¼¼¿ä.");
+                alert("ë‚ ì§œ í˜•ì‹ì„ ì˜¬ë°”ë¥´ê²Œ ì…ë ¥í•´ì£¼ì„¸ìš”.");
                 return false;
             }
         }
 
         if (stateValue == "") {
-            alert("»óÅÂ¸¦ ¼±ÅÃÇØÁÖ¼¼¿ä.");
+            alert("ìƒíƒœë¥¼ ì„ íƒí•´ì£¼ì„¸ìš”.");
             return false;
         }
 
         return true;
     }
 
-    // °ü·ÃÇ×¸ñ¿¡ µû¸¥ °¢ Ç×¸ñ Index ¶ç¿öÁÖ±â
+    // ê´€ë ¨í•­ëª©ì— ë”°ë¥¸ ê° í•­ëª© Index ë„ì›Œì£¼ê¸°
     function SearchRegardingObjectPop() {
         var inSubmenu = new Object();
         inSubmenu.Id = $("#RegardingTypeList option:selected").val();
@@ -85,7 +85,7 @@
         WindowOpenScroll(menu.Menuurl+ "?isPop=true", "", 350, 600, 100, 100);
     }
 
-    // °ü·ÃÇ×¸ñ¿¡¼­ ¼³Á¤ÇÑ ³»¿ëµé ¹İ¿µ
+    // ê´€ë ¨í•­ëª©ì—ì„œ ì„¤ì •í•œ ë‚´ìš©ë“¤ ë°˜ì˜
     function SetRegardingInfo(id, name) {
         $("#Regardingobjectid").val(id);
         $("#Regardingobjectname").val(name);
@@ -96,14 +96,14 @@
     <div class="container custom-container">
         <div class="row">
             <div class="col-md-12 custom-header">
-                <p class="text-left">¾à¼Ó Á¤º¸</p>
+                <p class="text-left">ì•½ì† ì •ë³´</p>
             </div>
         </div>
 
         <div class="col-md-12">
             <div class="custom-title">
                 <span class="glyphicon glyphicon-list" aria-hidden="true"></span>
-                <span>±âº» Á¤º¸</span>
+                <span>ê¸°ë³¸ ì •ë³´</span>
                 <hr />
             </div>
         </div>
@@ -117,17 +117,17 @@
             <input type="hidden" id="Modifyuser" name="Modifyuser" value="@Model.Modifyuser" />
 
             <div class="form-group">
-                <label class="col-md-1 control-label requireField">Á¦¸ñ</label>
+                <label class="col-md-1 control-label requireField">ì œëª©</label>
                 <div class="col-md-3">
-                    <input type="text" id="Name" name="Name" class="form-control" placeholder="Á¦¸ñ" value="@Model.Name" />
+                    <input type="text" id="Name" name="Name" class="form-control" placeholder="ì œëª©" value="@Model.Name" />
                 </div>
 
-                <label class="col-md-1 control-label requireField">½ÃÀÛÀÏ</label>
+                <label class="col-md-1 control-label requireField">ì‹œì‘ì¼</label>
                 <div class="col-md-3">
                     <div id="jqdatetimeinput_startdate"></div>
                     <input type="hidden" id="Startdate" name="Startdate" />
                 </div>
-                <label class="col-md-1 control-label">Á¾·áÀÏ</label>
+                <label class="col-md-1 control-label">ì¢…ë£Œì¼</label>
                 <div class="col-md-3">
                     <div id="jqdatetimeinput_enddate"></div>
                     <input type="hidden" id="Enddate" name="Enddate" />
@@ -135,11 +135,11 @@
             </div>
 
             <div class="form-group">
-                <label class="col-md-1 control-label requireField">»óÅÂ</label>
+                <label class="col-md-1 control-label requireField">ìƒíƒœ</label>
                 <div class="col-md-3">
                     <select id="State" name="State" class="form-control"></select>
                 </div>
-                <label class="col-md-1 control-label">°ü·ÃÇ×¸ñ<br />°Ë»öÇÏ±â</label>
+                <label class="col-md-1 control-label">ê´€ë ¨í•­ëª©<br />ê²€ìƒ‰í•˜ê¸°</label>
                 <div class="col-md-3">
                     <div class="input-group">
                         <input type="hidden" id="Regardingobjectid" name="Regardingobjectid" value="@Model.Regardingobjectid" />
@@ -155,21 +155,21 @@
                 <div class="col-md-4">
                     <input type="text" id="Regardingobjectname" name="Regardingobjectname" class="form-control"
                            value="@Model.Regardingobjectname"
-                           placeholder="¼±ÅÃµÈ °ü·ÃÇ×¸ñÀÌ Ç¥½ÃµË´Ï´Ù." aria-describedby="regardingobject name" readonly="readonly" />
+                           placeholder="ì„ íƒëœ ê´€ë ¨í•­ëª©ì´ í‘œì‹œë©ë‹ˆë‹¤." aria-describedby="regardingobject name" readonly="readonly" />
                 </div>
             </div>
 
             <div class="form-group">
-                <label class="col-md-1 control-label">´ã´çÀÚ</label>
+                <label class="col-md-1 control-label">ë‹´ë‹¹ì</label>
                 <div class="col-md-3">
                     <select id="Ownerid" name="Ownerid" class="form-control"></select>
                 </div>
             </div>
 
             <div class="form-group">
-                <label class="col-md-1 control-label">¼³¸í</label>
+                <label class="col-md-1 control-label">ì„¤ëª…</label>
                 <div class="col-md-11">
-                    <textarea id="Description" name="Description" class="form-control" placeholder="³»¿ëÀ» ÀÔ·ÂÇÏ¼¼¿ä." rows="4">@Model.Description</textarea>
+                    <textarea id="Description" name="Description" class="form-control" placeholder="ë‚´ìš©ì„ ì…ë ¥í•˜ì„¸ìš”." rows="4">@Model.Description</textarea>
                 </div>
             </div>
         </form>
@@ -180,7 +180,7 @@
                 <div class="col-md-2 custom-row-btn-margin">
                     <button type="button" id="CreateAppointmentsButton" class="btn btn-default" onclick="SubmitForm('Edit');">
                         <span class="glyphicon glyphicon-floppy-disk" aria-hidden="true"></span>
-                        ÀúÀå
+                        ì €ì¥
                     </button>
                 </div>
             }
@@ -189,14 +189,14 @@
                 <div class="col-md-2 custom-row-btn-margin">
                     <button type="button" id="DeleteButton" class="btn btn-default btn-danger" onclick="SubmitForm('Delete');">
                         <span class="glyphicon glyphicon-trash" aria-hidden="true"></span>
-                        »èÁ¦
+                        ì‚­ì œ
                     </button>
                 </div>
             }
             <div class="col-md-2 custom-row-btn-margin">
                 <a href="/Appointments/Index" class="btn btn-default">
                     <span class="glyphicon glyphicon-list" aria-hidden="true"></span>
-                    ¸ñ·Ï
+                    ëª©ë¡
                 </a>
             </div>
         </div>
@@ -206,7 +206,7 @@
                 <div class="custom-title">
                     <hr />
                     <span class="glyphicon glyphicon-list" aria-hidden="true"></span>
-                    <span>ÀÌ·ÂÁ¤º¸</span>
+                    <span>ì´ë ¥ì •ë³´</span>
                 </div>
             </div>
         </div>
@@ -215,10 +215,10 @@
                 <table class="table table-striped table-hover table-responsive">
                     <thead>
                         <tr>
-                            <th>»ı¼ºÀÏ</th>
-                            <th>»ı¼ºÀÚ</th>
-                            <th>¼öÁ¤ÀÏ</th>
-                            <th>¼öÁ¤ÀÚ</th>
+                            <th>ìƒì„±ì¼</th>
+                            <th>ìƒì„±ì</th>
+                            <th>ìˆ˜ì •ì¼</th>
+                            <th>ìˆ˜ì •ì</th>
                         </tr>
                     </thead>
                     <tr class="info">
